--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -1,18 +1,20 @@
-.cart__products {
-  grid-column: sidebar-start / sidebar-end;
-  grid-row: 1 / span 3;
-  background-color: var(--white);
-  border-radius: 2rem;
-  padding: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  
+@import "mixins";
 
-}
 .cart {
+  // grid-area: cart;
+  grid-column: sidebar-start / sidebar-end;
+  grid-row: 1 / span 1;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
+
+  @include respond(tab-land) { 
+   grid-row: cart-start / cart-end;
+   grid-column: 1 / -1;
+  width: 100%;
+  }
   &__heading {
     font-size: 1.8rem;
     font-weight: 800;
