--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,5 @@
+@import "mixins";
+
 :root {
 --primary-color: #3e3227;
 --secondary-color: #cc4e24;
@@ -30,10 +32,25 @@ body {
 body {
   font-family: var(--font-primary);
   box-sizing: border-box;
-  font-size: 62.5%;
   color: var(--color-grey-dark-2);
   font-weight: 300;
   background-color: var(--rose-100);
+}
+
+html {
+  font-size: 62.5%; //1 rem = 10px; 10px/16px = 62.5%
+
+  @include respond(tab-land) { // width < 1200?
+      font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+  }
+
+  @include respond(tab-port) { // width < 900?
+      font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+  
+  @include respond(big-desktop) {
+      font-size: 75%; //1rem = 12, 12/16
+  }
 }
 
 *,
@@ -49,6 +66,12 @@ a {
   text-decoration: none;
 }
 
+button{
+  all: unset;
+  padding: 0 .2rem;
+}
+
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -57,15 +80,23 @@ a {
 
 .container {
   display: grid;
-  grid-template-columns:
-        [full-start] repeat(6, min-content) [full-end sidebar-start] 1fr [sidebar-end];
-   grid-template-rows: repeat(2, 2rem) minmax(2rem, min-content) auto;
-   
+  grid-template-columns: [full-start] repeat(6, min-content) [full-end sidebar-start] 1fr [sidebar-end];
+  grid-template-rows:  repeat(4, 30rem);
   margin: 4rem 2rem;
-  // gap: 1rem;
+   
+
+  @include respond(tab-land) {
+    grid-template-rows: [product-start] min-content [product-end cart-start]min-content[cart-end];
+    justify-items: center;
+  }
+  @include respond(phone) { 
+    grid-template-columns: [full-start]minmax(250px, 1fr)[full-end];
+        
+    img {
+      transform: scale(90%);
+    }
+  }
+
+  
 }
 
-button{
-  all: unset;
-  padding: 0 .2rem;
-}
