--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -1,20 +1,32 @@
+@import "mixins";
+
 .heading {
-  font-size: 2rem;
+  font-size: 2.5rem;
   display: block;
-  grid-row: 1 / span 1;
 }
 .products {
-  grid-column: full-start / full-end;
-  grid-template-rows: repeat(3, min-content);
-  grid-row: 2 / -1;
-  margin: 2rem;
-
+  &__market {
+    grid-column: full-start / full-end;
+    grid-template-rows: repeat(3, min-content);
+    margin: 2rem;
+    @include respond(tab-port) { // width < 900?
+      grid-column: 1 / -1;
+  }
+}
   &__items {
     grid-row: 2 / span 1;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    align-items: center;
+
+    @include respond(tab-port) { // width < 900?
+      grid-template-columns: [full-start] repeat(2, 1fr) [full-end];
+      grid-column: 1 / -1;
+      
+  }
+    @include respond(phone) {
+      grid-template-columns: min-content;
+      grid-row: product-start / product-end;
+    }
   }
 }
 
@@ -23,7 +35,7 @@
   grid-row: 1 / span 3;
 
   gap: 3rem;
-  background-color: var(--white);
+  background-color: var(--red);
   border-radius: 2rem;
   padding: 3rem;
   margin-left: 1.5rem;
